<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Catalog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Nuevo Producto</string>
    <string name="action_search">Buscar</string>
    
    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
    <string name="size">Presentación</string>
    <string name="price">Precio</string>
    
    <string name="save">Guardar</string>
    
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    
    <string name="error_msg_1">Debe de llenar todos los campos</string>
    
    <string name="alert_msg_1">¿Desea eliminar este registro?</string>
    
    <string name="delete">Eliminar</string>

</resources>
